--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,50 @@
 <h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
+  <div >
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true %>
+  </div>
+  <div >
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%unless resource.errors[:email].empty?%>
+      <%=  "email #{resource.errors[:email][0]} "%>
+    <%end%>
   </div>
-
-  <div class="field">
+  <div >
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
-
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
+  <div>
+    <%= f.label :role,'Choose Your Role?' %> <br/>
+    <div >
+      <div>
+        <%= f.radio_button :role ,"freelancer"%>
+        Freelancer
+      </div>
+      <div>
+        <%=f.radio_button  :role, "client" %>
+        Client
+      </div>
+    </div>
+    <%unless resource.errors[:role].empty?%>
+      <%= "role #{resource.errors[:role][0]} "%>
+    <%end%>
+  </div>
+  <div class="field mb-3">
+    <%= f.label :profile_image %>
+    <br/>
+    <%= f.file_field :profile_image %>
+  </div>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
 <%= render "devise/shared/links" %>
