added styling on front page

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,1 +1,9 @@
-<h1>Welcome</h1>
+<header class=" hero" >
+  <div class="banner">
+    <h1> Find quality freelancers and agencies for mobile development </h1>
+    <p>Hire proven pros with confidence using the world’s largest, remote talent platform.</p>
+  </div>
+  <div class=" banner-illustration"  >
+    <%= inline_svg_tag "freelancer.svg" ,class:'svg_img' %>
+  </div>
+</header>
