--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,68 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.hero {
+  height: calc(90vh - 60px);
+  width: 100%;
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  flex-wrap: wrap;
+
+  .banner {
+    align-self: center;
+    color: white;
+    flex: 1 1 60%;
+    padding: 0 3rem;
+    font-family: "Poppins", sans-serif;
+
+    letter-spacing: 2px;
+
+    h1 {
+      font-size: 2.9rem;
+      text-transform: capitalize;
+      font-family: "Montserrat", sans-serif;
+      /*background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(168, 168, 168, 1) 100%);*/
+    }
+    @keyframes bg-animation {
+      0% {
+        background-position: left;
+      }
+      100% {
+        background-position: right;
+      }
+    }
+
+    p {
+      padding: 1.5rem 2rem 1rem 0;
+      font-size: 1.2rem;
+      font-family: "Poppins", sans-serif;
+    }
+  }
+  .banner-illustration {
+    flex: 1 1 40%;
+    min-width: 400px;
+    padding: 3rem 2rem 2rem 0;
+  }
+  .svg_img {
+    height: 100%;
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
+.hero::before {
+  position: absolute;
+  content: "";
+  background: linear-gradient(90deg, rgba(9, 33, 121, 1) 0%, rgba(0, 212, 255, 1) 98%);
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0 0 50% 50%/0 0 100% 100%;
+  transform: scaleX(2);
+  z-index: -1;
+}
