--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,11 @@
   </head>
   <body>
     <nav>
-      <%if current_user%>
-        <ul>
+      <ul>
+        <li>
+          <%=link_to  'Home',root_path%>
+        </li>
+        <%if current_user%>
           <li>
             <%=link_to  'Logout',destroy_user_session_path,method: :delete%>
           </li>
@@ -19,10 +22,10 @@
             <%=link_to 'Login',new_user_session_path%>
           </li>
           <li>
-            <%=link_to  'Signup',new_user_registration_path%>
+            <%=link_to  'Signup',new_user_registration_path,class:'btn-primary'%>
           </li>
-        </ul>
-      <%end%>
+        <%end%>
+      </ul>
     </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
