--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,12 +22,12 @@
 }
 nav {
   width: 100%;
-  height: 60px;
+  height: 65px;
   padding: 0 2rem;
   background: #f3f3f3;
 
   ul {
-    height: 60px;
+    height: inherit;
     display: flex;
 
     gap: 1.5rem;
@@ -41,7 +41,7 @@ nav {
       display: block;
       background: #1986d6;
       text-align: center;
-      padding: 5px 10px;
+      padding: 6px 10px;
       color: white;
       line-height: 20px;
       border-radius: 5px;
@@ -59,10 +59,4 @@ nav {
   li:first-child {
     margin-right: auto;
   }
-}
-
-.field_with_errors {
-  padding: 0px;
-
-  display: inline-block;
 }
