--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -77,6 +77,7 @@ $border: 1px solid rgb(209, 197, 197);
         color: black;
         border: $border;
       }
+
       .btn__add-background {
         background: #1986d6;
         color: white;
@@ -87,6 +88,14 @@ $border: 1px solid rgb(209, 197, 197);
       }
       & input {
         display: none;
+      }
+      .field_with_errors {
+        text-align: center;
+        display: inline;
+        border: none;
+      }
+      & .errors {
+        position: initial;
       }
     }
     .image__field i {
