--- a/app/views/freelancer_infos/index.html.erb
+++ b/app/views/freelancer_infos/index.html.erb
@@ -1,2 +1,4 @@
-<h1>FreelancerInfos#index</h1>
-<p>Find me in app/views/freelancer_infos/index.html.erb</p>
+<main style="width:300px;height:300px;">
+  <h1>FreelancerInfos#index</h1>
+  <p>Find me in app/views/freelancer_infos/index.html.erb</p>
+</main>
