--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -38,6 +38,25 @@
       font-size: 1.2rem;
       font-family: "Poppins", sans-serif;
     }
+    .btn-primary {
+      display: block;
+      text-decoration: none;
+      background-color: #3395db;
+      text-align: center;
+      padding: 0.5rem;
+      color: white;
+      border-radius: 8px;
+      font-weight: 600;
+      font-size: 1rem;
+      width: 140px;
+      border: none;
+      cursor: pointer;
+      transition: 1s background-color;
+      &:hover {
+        background: #137eca;
+        box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+      }
+    }
   }
   .banner-illustration {
     flex: 1 1 40%;
