--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -2,6 +2,7 @@
   <section class="banner">
     <h1> Find quality freelancers and agencies for mobile development </h1>
     <p>Hire proven pros with confidence using the world’s largest, remote talent platform.</p>
+    <%=link_to 'SignUp', new_user_registration_path,class:'btn-primary'%>
   </section>
   <div class=" banner-illustration"  >
     <%= inline_svg_tag "freelancer.svg" ,class:'svg_img' %>
