added messaging funtionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <ul>
         <%if current_user%>
           <li>
-            <%=link_to  destroy_user_session_path do%>
+            <%=link_to  conversations_path do%>
               <i class="fad fa-envelope"></i>
             <%end%>
           </li>
