--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -8,6 +8,7 @@
   gap: 1rem;
   position: absolute;
   transform: translate(0, 15px);
+  z-index: 10;
   background: white;
   border-radius: 10px;
 
