--- a/app/views/freelancer_infos/index.html.erb
+++ b/app/views/freelancer_infos/index.html.erb
@@ -1,4 +1,1 @@
-<main style="width:300px;height:300px;">
-  <h1>FreelancerInfos#index</h1>
-  <p>Find me in app/views/freelancer_infos/index.html.erb</p>
-</main>
+<%=render partial: 'projects/allprojects', locals:{ projects: @projects } %>
