--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,9 @@
             </div>
           </li>
         <%else%>
-          <li> <%=link_to 'Login',new_user_session_path,class:'btn-primary'%></li>
+          <li>
+            <%=link_to 'Login',new_user_session_path,class:'btn-primary'%>
+          </li>
         <%end%>
       </ul>
     </nav>
