--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <%end%>
           </li>
           <li>
-            <%=link_to  destroy_user_session_path do%>
+            <%=link_to  notifications_path do%>
               <i class="fad fa-bell"></i>
             <%end%>
           </li>
