performed simple testing

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,10 +1,11 @@
-<div class=" hero" >
+<div class=" hero">
   <section class="banner">
     <h1> Find quality freelancers and agencies for mobile development </h1>
     <p>Hire proven pros with confidence using the world’s largest, remote talent platform.</p>
     <%=link_to 'SignUp', new_user_registration_path,class:'btn-primary'%>
   </section>
-  <div class=" banner-illustration"  >
+  <div class=" banner-illustration">
     <%= inline_svg_tag "freelancer.svg" ,class:'svg_img' %>
   </div>
 </div>
+<%=freelancer_infos_url%>
