--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -212,6 +212,33 @@ $border: 1px solid rgb(206, 202, 202);
   transform: translateZ(100px);
   transition: transform 0.6s;
 }
+
+.project__overview > ul {
+  display: flex;
+  list-style-type: none;
+  & > li {
+    flex: 1;
+    align-self: center;
+    text-align: center;
+  }
+  .review__proposals {
+    position: relative;
+
+    ul {
+      position: absolute;
+
+      display: flex;
+      width: 100%;
+      list-style-type: none;
+      transform: translateY(0%);
+      & > li {
+        flex: 1;
+        align-self: center;
+        text-align: center;
+      }
+    }
+  }
+}
 /***********
 @media (max-width: 768px) {
     .project__page {
