--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,15 +1,28 @@
 <ul>
   <% @notifications.try(:each) do |notification| %>
     <%if notification.user.role=="client" %>
-      <li><%=notification.bid.freelancer.name %> placed a bid on your project</li>
-      <%=link_to 'accept',project_bid_path(notification.bid.project,notification.bid,bid: {approved: true } ) ,method: :put %>
-      <%=link_to 'reject',project_bid_path(notification.bid.project,notification.bid,bid: {approved: false } ) ,method: :put %>
+      <%= link_to  project_details_path(notification.bid.project) do %>
+        <li><%=notification.bid.freelancer.name %> placed a bid on your project</li>
+        <%if notification.bid.unapproved?%>
+          <%=link_to 'accept', accept_project_bid_path(notification.bid.project,notification.bid) ,method: :put %>
+          <%=link_to 'reject',reject_project_bid_path(notification.bid.project,notification.bid) ,method: :put %>
+        <%else%>
+          <p><%="you #{notification.bid.rejected? ? 'rejected' : 'approved'} the bid"%></p>
+        <%end%>
+      <%end%>
       <br />
     <%else%>
-      <% if notification.bid.approved%>
+      <% if notification.bid.accepted? || notification.bid.awarded?%>
+        <%if notification.bid.awarded?%>
+          <li><%=notification.bid.project.client.name %> awarded you the project</li>
+          <%=link_to 'Message',conversations_path(sender_id: notification.user.id,
+          recipient_id: notification.bid.project.client.id),method: :post%>
+        <% end %>
         <li><%=notification.bid.project.client.name %> accepted your bid</li>
-      <%else%>
+      <%elsif notification.bid.rejected?%>
         <li><%=notification.bid.project.client.name %> rejected your bid</li>
+      <%elsif notification.bid.awarded?%>
+      <%else%>
       <%end%>
     <%end%>
   <%end%>
