--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,6 +9,15 @@
       <div  >
         <p><%= message.content %></p>
       </div>
+      <%@documents=message.try(:documents)%>
+      <%@documents.each do |document|%>
+        <% if document.representable? %>
+          <%= image_tag document.variant(resize_to_limit: [100, 100]) %>
+        <%end%>
+        <div>
+          <%= link_to document.filename, rails_blob_path(document, disposition: 'preview') %>
+        </div>
+      <% end %>
       <div >
         <small><%= message.created_at.strftime("%d/%m/%y at %l:%M %p")%></small>
         <%if message.user_id==current_user.id%>
@@ -26,6 +35,9 @@
   <div >
     <div  >
       <%= f.text_area :content, placeholder: "Your message" %>
+    </div>
+    <div >
+      <%= f.file_field :documents,multiple: true %>
     </div>
     <div >
       <%= button_tag type ="submit"  do%>
