--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -15,8 +15,12 @@
       <% if notification.bid.accepted? || notification.bid.awarded?%>
         <%if notification.bid.awarded?%>
           <li><%=notification.bid.project.client.name %> awarded you the project</li>
-          <%=link_to 'Message',conversations_path(sender_id: notification.user.id,
+          <% if Conversation.between(notification.user.id,notification.bid.project.client.id ).present?%>
+            <%=link_to ' Message',conversation_messages_path(@conversation)%>
+          <% else %>
+            <%=link_to 'Message',conversations_path(sender_id: notification.user.id,
           recipient_id: notification.bid.project.client.id),method: :post%>
+          <% end %>
         <% end %>
         <li><%=notification.bid.project.client.name %> accepted your bid</li>
       <%elsif notification.bid.rejected?%>
