added search functionality

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,37 +6,82 @@
           <%=image_tag user_image(current_user.id),style:'width:30px;height:30px;'%>
         </span>
       <%end%>
-      <div  >
-        <p><%= message.content %></p>
-      </div>
-      <%@documents=message.try(:documents)%>
-      <%@documents.each do |document|%>
-        <% if document.try(:previewable?) %>
-          <%= link_to rails_blob_path(document, disposition: 'preview') do %>
-            <%=image_tag document.preview(resize_to_limit: [300, 300])%>
+      <%if message.content? && message.documents.attached?%>
+        <%@documents=message.try(:documents)%>
+        <%@documents.each do |document|%>
+          <% if document.try(:previewable?) %>
+            <%= link_to rails_blob_path(document, disposition: 'preview') do %>
+              <%=image_tag document.preview(resize_to_limit: [300, 300])%>
+            <%end%>
           <%end%>
-        <%end%>
-        <% if document.try(:representable?) %>
-          <%= link_to rails_blob_path(document, disposition: 'preview') do %>
-            <%=image_tag document.representation(resize_to_limit: [300, 300])%>
+          <% if document.try(:representable?) %>
+            <%= link_to rails_blob_path(document, disposition: 'preview') do %>
+              <%=image_tag document.representation(resize_to_limit: [300, 300])%>
+            <%end%>
           <%end%>
-        <%end%>
-        <div>
-          <% if !document.previewable? && !document.representable? %>
-            <%= link_to document.filename, rails_blob_path(document, disposition: 'preview') %>
-          <% end %>
+          <div>
+            <% if !document.previewable? && !document.representable? %>
+              <%= link_to document.filename, rails_blob_path(document, disposition: 'preview') %>
+            <% end %>
+          </div>
+        <% end %>
+        <div >
+          <p><%= message.content %></p>
         </div>
-      <% end %>
-      <div >
-        <small><%= message.created_at.strftime("%d/%m/%y at %l:%M %p")%></small>
-        <%if message.user_id==current_user.id%>
-          <%if message.read %>
-            <i class="fal fa-check-double "></i>
-          <%else%>
-            <i class="fal fa-check "></i>
+        <div >
+          <small><%= message.created_at.strftime("%d/%m/%y at %l:%M %p")%></small>
+          <%if message.user_id==current_user.id%>
+            <%if message.read %>
+              <i class="fal fa-check-double "></i>
+            <%else%>
+              <i class="fal fa-check "></i>
+            <%end%>
           <%end%>
-        <%end%>
-      </div>
+        </div>
+      <%elsif message.content?%>
+        <div >
+          <p><%= message.content %></p>
+        </div>
+        <div >
+          <small><%= message.created_at.strftime("%d/%m/%y at %l:%M %p")%></small>
+          <%if message.user_id==current_user.id%>
+            <%if message.read %>
+              <i class="fal fa-check-double "></i>
+            <%else%>
+              <i class="fal fa-check "></i>
+            <%end%>
+          <%end%>
+        </div>
+      <% elsif message.documents.attached?%>
+        <%@documents=message.try(:documents)%>
+        <%@documents.each do |document|%>
+          <% if document.try(:previewable?) %>
+            <%= link_to rails_blob_path(document, disposition: 'preview') do %>
+              <%=image_tag document.preview(resize_to_limit: [300, 300])%>
+            <%end%>
+          <%end%>
+          <% if document.try(:representable?) %>
+            <%= link_to rails_blob_path(document, disposition: 'preview') do %>
+              <%=image_tag document.representation(resize_to_limit: [300, 300])%>
+            <%end%>
+          <%end%>
+          <div>
+            <% if !document.previewable? && !document.representable? %>
+              <%= link_to document.filename, rails_blob_path(document, disposition: 'preview') %>
+            <% end %>
+          </div>
+        <% end %>
+        <div >
+          <small><%= message.created_at.strftime("%d/%m/%y at %l:%M %p")%></small>
+          <%if message.user_id==current_user.id%>
+            <%if message.read %>
+              <i class="fal fa-check-double "></i>
+            <%else%>
+              <i class="fal fa-check "></i>
+            <%end%>
+          <%end%>
+        </div>
+      <%end%>
     <% end %>
   <% end %>
 </div>
