--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,17 @@
         <%=image_tag "logo.png",class:'logo' %>
       <%end%>
     </header>
+    <div class="search__bar">
+      <%= search_form_for @q, url: search_results_path do |f|%>
+        <%= f.label :name_cont,style:'display:none' %>
+        <%= f.search_field :name_cont, placeholder: "Search", class: "form-control" %>
+        <div class="input-group-btn">
+          <%= button_tag class: ' btn-primary'   do%>
+            <i class="fad fa-search"></i>
+          <%end%>
+        </div>
+      <% end %>
+    </div>
     <nav>
       <ul>
         <%if current_user%>
