--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,66 @@ body {
       height: 60px;
     }
   }
+  .search__bar {
+    position: absolute;
+
+    top: 32.5px;
+    left: 100px;
+    transform: translateY(-50%);
+    z-index: 10;
+    .arrow {
+      display: block;
+      box-sizing: border-box;
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 10px solid #3187d3;
+      position: absolute;
+      left: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      .search__dropdown {
+        height: 100px;
+        width: 200px;
+        background: rgb(255, 255, 255);
+        transform: translateY(-200%);
+        transition: transform 0.3s;
+        a {
+          display: block;
+          text-decoration: none;
+          font-size: 0.8rem;
+          padding: 15px;
+          border: 1px solid #e7e3e3;
+          cursor: pointer;
+          &:hover {
+            background-color: rgb(235, 235, 235);
+          }
+        }
+      }
+    }
+    input {
+      height: 40px;
+      border-radius: 20px;
+      border: 1px solid #c1c1c1;
+      padding-left: 30px;
+    }
+
+    .search-btn {
+      display: inline-block;
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY((-50%));
+      button {
+        border: none;
+        background: transparent;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
   nav {
     width: 100%;
     border: 1px solid rgb(206, 202, 202);
