--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -38,7 +38,20 @@
       font-size: 2.9rem;
       text-transform: capitalize;
       font-family: "Montserrat", sans-serif;
+
       /*background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(168, 168, 168, 1) 100%);*/
+    }
+    @keyframes text-focus-in {
+      0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+      }
+      100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+      }
     }
     @keyframes bg-animation {
       0% {
@@ -79,11 +92,12 @@
     flex: 1 1 40%;
     min-width: 400px;
     padding: 3rem 2rem 2rem 0;
-  }
-  .svg_img {
-    height: 100%;
-    display: block;
-    width: 80%;
-    margin: 0 auto;
+    animation: text-focus-in 1s;
+    .svg_img {
+      height: 100%;
+      display: block;
+      width: 80%;
+      margin: 0 auto;
+    }
   }
 }
