--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
       <ul>
         <%if current_user%>
           <li>
-            <%=link_to  conversations_path do%>
-              <i class="fad fa-envelope"></i>
+            <%=link_to  bid_history_projects_path do%>
+              <i class="fad fa-history"></i>
             <%end%>
           </li>
           <li>
@@ -42,9 +42,9 @@
               <i class="fad fa-bell"></i>
             <%end%>
           </li>
-          <li>
-            <%=link_to  bid_history_projects_path do%>
-              <i class="fad fa-history"></i>
+          <li class="conversations__dropdown">
+            <%=link_to  conversations_path ,remote: true do%>
+              <i class="fad fa-envelope"></i>
             <%end%>
           </li>
           <li>
