--- a/app/views/pages/_projects.html.erb
+++ b/app/views/pages/_projects.html.erb
@@ -23,15 +23,17 @@
       <div class="experience__level"> <%= f.radio_button :experience_eq, 'Intermediate'%> Intermediate</div>
       <div class="experience__level"> <%= f.radio_button :experience_eq, 'Expert'%> Expert</div>
     </div>
+  <% end %>
+  <%= link_to "Clear Search", request.path, class:"cancel-button" %>
+  <div class="projects">
+    <%projects.try(:each) do|project|%>
+      <div class="project">
+        <h1> <%=project.try(:title)%></h1>
+        <b><%=project.try(:category)%></b>
+        <small><%=project.try(:description)%></small>
+        <%= link_to '',project_path(project),remote: true%>
+      </div>
+      <br/>
+    <%end%>
   </div>
-<% end %>
-</div>
-<%= link_to "Clear Search", request.path, class:"cancel-button" %>
-<div>
-  <%projects.try(:each) do|project|%>
-    <%=project.try(:title)%>
-    <b><%=project.try(:category)%></b>
-    <%=project.try(:description)%>
-    <br/>
-  <%end%>
 </div>
